--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".GroupOverviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".GroupsActivity"
             android:exported="false" />
         <activity
