--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 
     // Add the dependencies for the desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
