--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,8 +80,10 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
-    // Add the dependencies for the desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    // Declare the dependencies for the Dynamic Links and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
