--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.tradingview:lightweightcharts:3.8.0'
+
+    implementation 'com.android.volley:volley:1.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
